Add GM manage locations shortcut

--- a/module/templates/research-tracker.hbs
+++ b/module/templates/research-tracker.hbs
@@ -61,6 +61,13 @@
                 <button type="button" data-action="edit-topic">
                   <i class="fas fa-edit"></i>
                 </button>
+                <button
+                  type="button"
+                  data-action="manage-locations"
+                  title="{{localize 'PF2E.PointsTracker.Research.ManageLocations'}}"
+                >
+                  <i class="fas fa-map-marked-alt"></i>
+                </button>
                 <button type="button" data-action="delete-topic">
                   <i class="fas fa-trash"></i>
                 </button>
