Add chase event tracker tab with UI and backend support

--- a/module/templates/points-tracker.hbs
+++ b/module/templates/points-tracker.hbs
@@ -10,6 +10,14 @@
     </button>
     <button
       type="button"
+      class="points-tracker__tab{{#if isChaseActive}} is-active{{/if}}"
+      data-tab="chase"
+    >
+      <i class="fas fa-running" aria-hidden="true"></i>
+      {{localize "PF2E.PointsTracker.Chase.Title"}}
+    </button>
+    <button
+      type="button"
       class="points-tracker__tab{{#if isReputationActive}} is-active{{/if}}"
       data-tab="reputation"
     >
@@ -34,6 +42,12 @@
       data-tab-panel="research"
     >
       {{> "modules/pf2e-points-tracker/module/templates/partials/research-tab.hbs" research}}
+    </section>
+    <section
+      class="points-tracker__panel{{#if isChaseActive}} is-active{{/if}}"
+      data-tab-panel="chase"
+    >
+      {{> "modules/pf2e-points-tracker/module/templates/partials/chase-tab.hbs" chase}}
     </section>
     <section
       class="points-tracker__panel{{#if isReputationActive}} is-active{{/if}}"
